Docs: PyPI Classifiers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "Haswell",
         "libsqlite",
         "Neoverse",
+        "scikit",
         "Skylake",
+        "tqdm",
         "uops",
         "Vardanian",
         "vdos"
